hphp/test/slow/object_property/705.php.expectf
HipHop Fatal error: Cannot access empty property in %s/test/slow/object_property/705.php on line 4
